Before migration to Java 23.
Should all Gradle Native code be removed ? Hmm...